// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action generators setSignupStep1Complete matches snapshot 1`] = `
Object {
  "payload": true,
  "type": "SignupFlow/SET_SIGNUP_STEP1_COMPLETE",
}
`;

exports[`action generators signup matches snapshot 1`] = `
Object {
  "payload": Object {
    "api": Object {
      "method": "post",
      "params": Object {
        "email": "b",
        "login": true,
        "name": "a",
        "password": "c",
        "resp": "user",
      },
      "path": "/noo/user",
    },
  },
  "type": "SignupFlow/SIGNUP",
}
`;

exports[`action generators updateLocalUserSettings matches snapshot 1`] = `
Object {
  "payload": Object {
    "email": "b",
    "name": "a",
    "password": "c",
  },
  "type": "SignupFlow/UPDATE_LOCAL_USER_SETTINGS",
}
`;

exports[`action generators updateUserSettings matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($changes: MeInput) {
        updateMe(changes: $changes) {
          id
        }
      }",
    "variables": Object {
      "changes": Object {
        "email": "b",
        "name": "a",
        "password": "c",
      },
    },
  },
  "meta": Object {
    "changes": Object {
      "email": "b",
      "name": "a",
      "password": "c",
    },
    "optimistic": true,
  },
  "type": "UPDATE_USER_SETTINGS",
}
`;
